@@ -293,6 +293,11 @@ strong {
   opacity: 0.5;
 }
 
+.label > a {
+  color: #fff;
+  text-decoration: none;
+}
+
 .alert {
   padding: 0;
   margin-right: 20px;
